blocks/modal.css
.modal {
  visibility: hidden;
  background-color: #00000080;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 10px;
  opacity: 0;
  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
}

.modal_type_preview {
  padding: 0 16px;
}

.modal_is-opened {
  visibility: visible;
  opacity: 1;
  display: flex;
}

.modal__container {
  max-width: 630px;
  width: 100%;
  background-color: #fff;
  padding: 32px 50px;
  position: relative;
  border-radius: 8px;
  box-sizing: border-box;
}

.modal__close {
  position: absolute;
  top: 32px;
  right: 50px;
  width: 40px;
  height: 40px;
  border: none;
  background-color: #fff;
  opacity: 0.4;
}

.modal__close:hover {
  cursor: pointer;
  opacity: 1;
}

.modal__close_type_preview {
  color: #fff;
  background: none;
  background-repeat: no-repeat;
  top: 0;
  right: -50px;
  opacity: 1;
}

.modal__close_type_preview:hover {
  cursor: pointer;
  opacity: 0.5;
}

.modal__title {
  margin: 0 0 32px;
  line-height: 100%;
  font-size: 32px;
  font-weight: 400;
}

.modal__form {
  display: flex;
  flex-direction: column;
}

.modal__input {
  display: block;
  margin: 8px 0 0;
  width: 100%;
  font-size: 20px;
  border-radius: 8px;
  padding: 16px 12px;
  border: 1px solid rgba(33, 33, 33, 0.4);
  box-sizing: border-box;
}

.modal__input::placeholder {
  color: #2121214d;
}

.modal__label {
  font-size: 16px;
  font-weight: 500;
  margin: 0 0 32px;
}

.modal__submit-button {
  background-color: #212121;
  color: #fcf5e5;
  font-size: 16px;
  font-weight: 500;
  line-height: 100%;
  border-radius: 8px;
  padding: 18px 32px;
  gap: 8px;
  max-width: 156px;
  height: 52px;
  border: none;
  cursor: pointer;
}

.modal__submit-button:hover {
  cursor: pointer;
  background-color: #212121;
  opacity: 0.8;
}

.modal__input:hover {
  border-color: rgba(33, 33, 33, 0.6);
}

.modal__image-container {
  position: relative;
}

.modal__image {
  max-width: 80vw;
  max-height: 80vh;
  width: 100%;
  object-fit: contain;
  display: block;
  border-radius: 8px;
}

.modal__caption {
  color: #fff;
  font-size: 20px;
  font-weight: 500;
  line-height: 120%;
  font-family: Poppins, Arial, Helvetica, sans-serif;
  background: #212121;
  border-radius: 8px;
  display: inline-block;
  margin-top: 8px;
  padding: 4px 8px;
}

@media screen and (max-width: 480px) {
  .modal {
    padding-left: 12px;
    padding-right: 12px;
  }

  .modal__title {
    font-size: 20px;
  }

  .modal__close {
    top: 22px;
    right: 12px;
  }

  .modal__form {
    max-width: 276px;
  }

  .modal__input {
    font-size: 16px;
  }

  .modal__submit-button {
    width: 100%;
    max-width: none;
  }
}

@media screen and (max-width: 630px) {
  .modal__close_type_preview {
    top: -45px;
    right: 0;
  }

  .modal__image {
    max-width: unset;
  }

  .modal__caption {
    padding: 4px 8px;
    font-size: 16px;
  }
}

